--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<!-- <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required> -->
 					    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 					    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_97b275edadde470383bd38eab_b02433b14e" tabindex="-1" value=""></div>
-					    <div class="clear"><input type="submit" value="Find out More" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary"></div>
+					    <div class="col-sm-12 clear"><input type="submit" value="Find out More" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary"></div>
 					    </div>
 					</form>
 					</div>
