--- a/index.html
+++ b/index.html
@@ -1,49 +1,57 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>BOOTSTRAP - Startup page</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-	<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
-	<link rel="stylesheet" type="text/css" href="style.css">
-<!-- <style type="text/css">
-	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style> -->
-</head>
-<body>
-	<!-- background -->
-	<div class= "bg text-center d-flex">
-		<div class="container row">
-			<div class="col-sm"></div>
-    		<div class="col-sm-12 my-auto">
-				<h1>Looking for ideas?</h1>
-				<hr>
-				<!-- Begin MailChimp Signup Form -->
-<!-- 					<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css"> -->
+  <head>
+    <title>Startup</title>
 
-					<div id="mc_embed_signup">
-					<form action="https://website.us19.list-manage.com/subscribe/post?u=97b275edadde470383bd38eab&amp;id=b02433b14e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-					    <div id="mc_embed_signup_scroll">
-						<!-- <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required> -->
-					    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-					    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_97b275edadde470383bd38eab_b02433b14e" tabindex="-1" value=""></div>
-					    <div class="col-sm-12 clear"><input type="submit" value="Find out More" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary"></div>
-					    </div>
-					</form>
-					</div>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
-					<!--End mc_embed_signup-->
-				<!-- <button type="button" class="btn btn-primary">Find out More</button> -->
-    		</div>
-    		<div class="col-sm"></div>
-		</div>
-	</div> 
+    <!-- Note that the below Bootstrap file is a specific version. If you grab the most
+    current from Bootstrap website, you will see the button grow transition being a lot faster
+    than in my video. Use whichever style sheet you like best! -->
+    <!-- Bootstrap CSS from a CDN. This way you don't have to include the bootstrap file yourself -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!-- Mailchimp link -->
+    <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+    <!-- My own stylesheet -->
+    <link href="style.css" rel="stylesheet">
+     <!-- <style type="text/css">
+      #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+      /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+         We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+    </style>    -->
+  </head>
+  <body>
+    <header class="startup text-center text-white d-flex">
+      <div class="container my-auto">
+        <div class="row">
+          <div class="col-lg-12 my-auto">
+            <h1 class="text-uppercase faded">
+              <strong>Looking for ideas?</strong>
+            </h1>
+            <hr>
+          </div>
+          <div class="col-lg-12 my-auto">
+                          <!-- Begin MailChimp Signup Form -->
+              <div id="mc_embed_signup">
+              <form action="https://website.us19.list-manage.com/subscribe/post?u=97b275edadde470383bd38eab&amp;id=b02433b14e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                  <div id="mc_embed_signup_scroll">
+                <!-- <label for="mce-EMAIL">Subscribe to our mailing list</label> -->
+                <!-- <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required> -->
+                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_97b275edadde470383bd38eab_b02433b14e" tabindex="-1" value=""></div>
+                  <div class="clear"><input type="submit" value="Find Out More" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary btn-xl"></div>
+                  </div>
+              </form>
+              </div>
 
-	<!-- javascript 4 bootstrap -->
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-</body>
+              <!--End mc_embed_signup-->
+            <!-- <button class="btn btn-primary btn-xl">Find Out More</button> -->
+          </div>
+        </div>
+      </div>
+    </header>
+
+  </body>
+
 </html>
