--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                           <!-- Begin MailChimp Signup Form -->
               <div id="mc_embed_signup">
               <form action="https://website.us19.list-manage.com/subscribe/post?u=97b275edadde470383bd38eab&amp;id=b02433b14e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                  <div id="mc_embed_signup_scroll">
+                  <!-- <div id="mc_embed_signup_scroll"> -->
                 <!-- <label for="mce-EMAIL">Subscribe to our mailing list</label> -->
                 <!-- <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required> -->
                   <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
